--- a/estilo/style.css
+++ b/estilo/style.css
@@ -60,6 +60,7 @@ header > p {
     padding-right: 10px;
     max-width: 500px;
     margin: auto;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.384);
     text-align: center;
 }
